--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
             - run: make test
             - run: make lint
             - run: make docker_build
+            - run: make docker_push 
 workflows: 
     basic:
         jobs:
