--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,17 @@
 version: 2.1
-
 jobs:
-  build-and-test:
-    machine:
-      image: ubuntu-2004:current
-      docker_layer_caching: true
-    steps:
-      - checkout
-      - run: make deps
-      - run: make test
-      - run: make lint
-      - run: make docker_build
-      - run: make docker_push
-
+    build-and-test:
+        machine:
+            image: ubuntu-2004:current
+            docker_layer_caching: true
+        steps:
+            - checkout
+            - run: make deps
+            - run: make test
+            - run: make lint
+            - run: make docker_build
+            - run: make docker_push
 workflows:
-  basic:
-    jobs:
-      - build-and-test:
+    basic:
+        jobs:
+            - build-and-test
